# dia-mcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  EXAMPLES.md  README.md  manifesto.md  pyproject.toml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/dia/: __init__.py  config.py  server.py  sources.py
src/dia/clients/: firecrawl.py  tinyfish.py
src/dia/index/: db.py
src/dia/prompts/: inspo_hunt.py
src/dia/tools/: compare.py  design_dna.py  dig_platform.py  find_inspo.py  index_flow.py  index_pattern.py  recommend_colors.py  screenshot.py  search_index.py  site_pattern_hunt.py  ux_oracle.py  walk_flow.py
tests/: test_all_tools.py
uxindex/: ux_inspo.db
